Fix icon error alignment + spinner alignment

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -134,7 +134,7 @@ cart-remove-button .icon-remove {
 @media screen and (min-width: 750px) {
   .cart-item .loading-overlay {
     right: 0;
-    padding-top: 5.5rem;
+    padding-top: 4.5rem;
     bottom: auto;
   }
 }
@@ -146,7 +146,7 @@ cart-remove-button .icon-remove {
 .cart-item__error {
   font-size: 1.2rem;
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 .cart-item__error-text {
@@ -157,6 +157,7 @@ cart-remove-button .icon-remove {
   flex-shrink: 0;
   width: 1.2rem;
   margin-right: 0.7rem;
+  margin-top: 0.1rem;
 }
 
 .cart-item__error-text:empty + svg {
@@ -274,6 +275,14 @@ cart-remove-button .icon-remove {
 
   .cart-item__price-wrapper > *:only-child:not(.cart-item__discounted-prices) {
     margin-top: 1rem;
+  }
+
+  .cart-item__error {
+    align-items: center;
+  }
+
+  .cart-item__error-text + svg {
+    margin-top: -0.2rem;
   }
 }
 
